--- a/src/assets/scss/commonstyles.scss
+++ b/src/assets/scss/commonstyles.scss
@@ -2,3 +2,4 @@ $bodymargin: 0;
 $bodypadding: 0;
 $defaultFontfamily: 'Roboto';
 $layout-breakpoint-small: '1024px';
+$bgcolors: ("type1": "#979797", "type2": "#3B86FF", "type3": "#8B68EE", "type4": "#EE3541");
