--- a/src/assets/scss/ratecard.scss
+++ b/src/assets/scss/ratecard.scss
@@ -7,7 +7,7 @@
         margin-top: 100px;
         margin-bottom: 10px;
         margin-top: 100px;
-
+        @include reset-list();
         @media (max-width: $layout-breakpoint-small) {
             max-width: 100%;
             position: relative !important;
