--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -1,12 +1,12 @@
 <article class="rate-card__container">
         <mat-grid-list cols="2" rowHeight="290px">
-                <mat-grid-tile class="rate-card__items {{item.bgcolor}}" *ngFor="let item of cardPageData; let i = index" [ngClass]="{'disable': !item.selected && isCardBoughtService}">
-                        <h1>{{item.type}}</h1>
-                        <div class="rate-card__price" *ngIf="!item.selected">{{item.price}}</div>
-                        <div class="rate-card__price" *ngIf="item.selected">Bought</div>
-                        <div class="rate-card__details">{{item.detail}}</div>
-                        <button *ngIf="!item.selected" class="buy-btn" (click)="selectYouCard(item)">Buy</button>
-                        <button *ngIf="item.selected" class="cancel-btn" (click)="deselectAllCards(item)">Cancel</button>
+                <mat-grid-tile class="rate-card__items type{{carobj.id}}" *ngFor="let carobj of cardPageData; let i = index" [ngClass]="{'disable': !carobj.selected && isCardBoughtService}">
+                        <h1>{{carobj.type}}</h1>
+                        <div class="rate-card__price" *ngIf="!carobj.selected">{{carobj.price}}</div>
+                        <div class="rate-card__price" *ngIf="carobj.selected">Bought</div>
+                        <div class="rate-card__details">{{carobj.detail}}</div>
+                        <button *ngIf="!carobj.selected" class="buy-btn" (click)="selectYouCard(carobj)">Buy</button>
+                        <button *ngIf="carobj.selected" class="cancel-btn" (click)="deselectCards(carobj)">Cancel</button>
                 </mat-grid-tile>
         </mat-grid-list>
 </article>
