removed scroll in mobile view

--- a/src/assets/scss/commonstyles.scss
+++ b/src/assets/scss/commonstyles.scss
@@ -1,5 +1,7 @@
 $bodymargin: 0;
 $bodypadding: 0;
 $defaultFontfamily: 'Roboto';
-$layout-breakpoint-small: '1024px';
+$layout-breakpoint-medium: '1024px';
+$layout-breakpoint-small: '800px';
+$layout-breakpoint-extra-small: '500px';
 $bgcolors: ("type1": "#979797", "type2": "#3B86FF", "type3": "#8B68EE", "type4": "#EE3541");
