--- a/src/assets/scss/ratecard.scss
+++ b/src/assets/scss/ratecard.scss
@@ -12,13 +12,19 @@
         margin-bottom: 10px;
         margin-top: 100px;
         @include reset-list();
-        @media (max-width: $layout-breakpoint-small) {
+        @media (max-width: $layout-breakpoint-medium) {
             max-width: 100%;
             position: relative !important;
             width: 100% !important;
             left: auto !important;
             margin-top: 20px;
             height: 320px !important;
+        }
+        @media (max-width: $layout-breakpoint-small) {
+            height: 250px !important;
+        }
+        @media (max-width: $layout-breakpoint-extra-small) {
+            height: 230px !important;
         }
         opacity: 1;
             pointer-events: auto;
@@ -29,7 +35,7 @@
             justify-content: flex-start;
         }
         h1{
-            font-size:  1.6em;
+            font-size:  28px;
             color: #fff;
             font-weight: normal;
             text-align: left;
@@ -41,6 +47,9 @@
             font-weight: normal;
             text-align: center;
             font-size: 80px;
+            @media (max-width: $layout-breakpoint-small) {
+                font-size: 50px;
+            }
         }
         .rate-card__details{
             font-size: 18px;
