changed button default style

--- a/src/assets/scss/ratecard.scss
+++ b/src/assets/scss/ratecard.scss
@@ -66,6 +66,7 @@
             color: #3B86FF;
             font-weight: 300;
             text-transform: uppercase;
+            border: none;
         }
         &.disable{
             opacity: 0.5;
