--- a/src/assets/scss/commonstyles.scss
+++ b/src/assets/scss/commonstyles.scss
@@ -1,6 +1,7 @@
 $bodymargin: 0;
 $bodypadding: 0;
 $defaultFontfamily: 'Roboto';
+$layout-breakpoint-large: '1366px';
 $layout-breakpoint-medium: '1024px';
 $layout-breakpoint-small: '800px';
 $layout-breakpoint-extra-small: '500px';
