--- a/src/assets/scss/mixins.scss
+++ b/src/assets/scss/mixins.scss
@@ -1,7 +1,9 @@
 @mixin reset-list {
     @each $key, $value in $bgcolors {
         &.#{$key}{
-            background: #{$value}
+            figure {
+                background: #{$value}
+            }
         }
     }
 }
