--- a/src/assets/scss/ratecard.scss
+++ b/src/assets/scss/ratecard.scss
@@ -6,25 +6,25 @@
         width: 90%;
     }
     .rate-card__items{
-        background: #cccccc;
-        max-width: 400px;
         margin-top: 100px;
         margin-bottom: 10px;
         margin-top: 100px;
         @include reset-list();
+        
         @media (max-width: $layout-breakpoint-medium) {
             max-width: 100%;
             position: relative !important;
             width: 100% !important;
             left: auto !important;
             margin-top: 20px;
-            height: 320px !important;
+            height: 220px !important;
+            text-align: center;
         }
         @media (max-width: $layout-breakpoint-small) {
-            height: 250px !important;
+            height: 220px !important;
         }
         @media (max-width: $layout-breakpoint-extra-small) {
-            height: 230px !important;
+            height: 220px !important;
         }
         opacity: 1;
             pointer-events: auto;
@@ -33,6 +33,9 @@
             flex-direction: column;
             color: #fff;
             justify-content: flex-start;
+            width: 90%;
+            background: #f00;
+            margin: 0 auto;
         }
         h1{
             font-size:  28px;
@@ -47,8 +50,8 @@
             font-weight: normal;
             text-align: center;
             font-size: 80px;
-            @media (max-width: $layout-breakpoint-small) {
-                font-size: 50px;
+            @media (max-width: $layout-breakpoint-medium) {
+                font-size: 40px;
             }
         }
         .rate-card__details{
@@ -56,7 +59,6 @@
             text-align: left;
             width: 95%;
             padding: 5%;
-            text-align: center;
         }
         button{
             width: 120px;
